// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes the class when hovered 1`] = `
<a
  className="normal"
  href="https://www.tiktok.com/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Tik Tok
</a>
`;

exports[`changes the class when hovered 2`] = `
<a
  className="hovered"
  href="https://www.tiktok.com/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Tik Tok
</a>
`;

exports[`changes the class when hovered 3`] = `
<a
  className="normal"
  href="https://www.tiktok.com/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Tik Tok
</a>
`;
